Improve visibility of navbar when fixed.

--- a/youmu/static/css/base.css
+++ b/youmu/static/css/base.css
@@ -174,6 +174,7 @@ html {
   width: 100%;
   margin-right: 0;
   background-color: rgba(255, 255, 255, 0.5);
+  transition: all 0.3s ease;
   padding: 10px; }
   .navbar:last-child {
     margin-right: 0; }
@@ -248,7 +249,9 @@ html {
   position: fixed;
   max-width: 1000px;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  z-index: 100;
+  background-color: rgba(255, 255, 255, 0.9); }
   .navbar-fixed:after {
     content: "";
     display: table;
